# pdf_signature

./: README.md  plan.md  proj_reinstall.sh  pyproject.toml  requirements.txt  rxconfig.py
assets/: draw_helpers.js  signature_pad_bridge.js
pdf_signature/: pdf_signature.py
pdf_signature/components/: pdf_viewer.py  sidebar.py  signature_modal.py
pdf_signature/states/: pdf_state.py
testcases/smoke_signature/: run_test.py
