[tool.poetry]
name = "pdf-signature"
version = "0.1.0"
description = "Lightweight web app for PDF signing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "pdf_signature" }]

[tool.poetry.dependencies]
python = "~3.11"
reflex = "0.8.24.post1"
pymupdf = "1.24.7"
granian = "2.7.1"
reflex-mouse-track = "*"
fastapi = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "playwright (>=1.58.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
